# vk-comics

./: .gitignore  README.md  pyproject.toml  requirements.txt
vk_comics/: vk_comics.py
